BusOne01/src/objects/BOT_Product_Formulary_JO__c.object
<CustomObject>
    <description>(BOT) It is a junction object between plan product and formulary objects. It is having Master-Detail relationship with Plan product and Plan formulary objects.</description>
    <fields>
        <fullName>BOT_Account__c</fullName>
        <description>Getting account name from Plan product object</description>
        <formula>HYPERLINK( BOT_Plan_Product__r.BOT_Account__r.Id  ,  BOT_Plan_Product__r.BOT_Account__r.Name )</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOT_Benefit_Design_ID__c</fullName>
        <description>It is used to store the BOT formulary ID. It is used for BOT internal reference only.</description>
        <label>Benefit Design ID</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BOT_Benefit_Design__c</fullName>
        <description>Master-Detail relationship to Benefit Design Object.</description>
        <label>Benefit Design</label>
        <referenceTo>Benefit_Design_vod__c</referenceTo>
        <relationshipName>Benefit_Design</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BOT_Channel__c</fullName>
        <description>Getting channel form the Plan product object</description>
        <formula>TEXT(BOT_Plan_Product__r.BOT_Channel__c)</formula>
        <label>Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOT_Plan_Product_ID__c</fullName>
        <description>It is used to store the plan product ID. It is used for BOT internal reference only.</description>
        <label>Plan Product ID</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BOT_Plan_Product__c</fullName>
        <description>Master-Detail relationship to Plan product object</description>
        <label>Plan Product</label>
        <referenceTo>BOT_Plan_Product__c</referenceTo>
        <relationshipLabel>Plan Formulary</relationshipLabel>
        <relationshipName>Plan_Product</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BOT_SubChannel__c</fullName>
        <description>It is used to pull subChannel value from the parent Plan Product record.</description>
        <formula>BOT_Plan_Product__r.BOT_SubChannel__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SubChannel</label>
        <type>Text</type>
    </fields>
    <label>Plan-Product Formulary</label>
    <nameField>
        <displayFormat>PF-{0000}</displayFormat>
        <label>S No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plan-Product Formulary</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>